force-app/main/default/objects/SL_LIB16_UserChoise__c/SL_LIB16_UserChoise__c.object-meta.xml
<CustomObject>
    <label>ME Core: User Choice</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>SL_LIB16_UserChoise Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>