force-app/main/default/objects/SL_LIB16_UserChoise__c/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>