force-app/main/default/objects/SL_LIB16_UserChoise__c/fields/Mass_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Mass_Implementation__c</fullName>
    <label>Implementation</label>
    <referenceTo>SL_Mass_Implementation__c</referenceTo>
    <relationshipName>SL_LIB16_UserChoises</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>