force-app/main/default/objects/SL_LIB16_UserChoise__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>View</label>
    <referenceTo>SL_View__c</referenceTo>
    <relationshipName>User_Choises</relationshipName>
    <type>Lookup</type>
</CustomField>